--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" media="none" onload="if(media!='all')media='all'" href="/style.css">
+    <link rel="stylesheet" type="text/css" media="none" onload="if(media!='all')media='all'" href="./style.css">
     <!-- <noscript><link rel="stylesheet" href="/style.css"></noscript> -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3faf7fd3d7.js" crossorigin="anonymous"></script>
