--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <!-- <noscript><link rel="stylesheet" href="/style.css"></noscript> -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3faf7fd3d7.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="/images/logo.png">
-    <script src="/lightbox-plus-jqurey.min.js"></script>
+    <link rel="icon" href="./images/logo.png">
+    <script src="./lightbox-plus-jqurey.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <link rel="stylesheet" href="/lightbox.min.css">
+    <link rel="stylesheet" href="./lightbox.min.css">
 
     
     <title>Lifestyle Gym</title>
@@ -70,18 +70,18 @@
     </div>
     <div id="gallery" class="gallerys">
         <div  class="gallery">
-            <a href="/images/2481596.jpg" data-lightbox="mygallery" data-title="Light Trail"><img src="/images/2481596.jpg"></a>
-            <a href="" data-lightbox="mygallery" data-title="Light Trail"><img src="/images/2481596.jpg"></a>
-            <a href="" data-lightbox="mygallery" data-title="Light Trail"><img src="/images/2481596.jpg"></a>
-            <a href="" data-lightbox="mygallery" data-title="Light Trail"><img src="/images/2481596.jpg"></a>
-            <a href="" data-lightbox="mygallery" data-title="Light Trail"><img src="/images/2481596.jpg"></a>
-            <a href="" data-lightbox="mygallery" data-title="Light Trail"><img src="/images/2481596.jpg"></a>
-            <a href="" data-lightbox="mygallery" data-title="Light Trail"><img src="/images/2481596.jpg"></a>
-            <a href="" data-lightbox="mygallery" data-title="Light Trail"><img src="/images/2481596.jpg"></a>
-            <a href="" data-lightbox="mygallery" data-title="Light Trail"><img src="/images/2481596.jpg"></a>
-            <a href="" data-lightbox="mygallery" data-title="Light Trail"><img src="/images/2481596.jpg"></a>
-            <a href="" data-lightbox="mygallery" data-title="Light Trail"><img src="/images/2481596.jpg"></a>
-            <a href="" data-lightbox="mygallery" data-title="Light Trail"><img src="/images/2481596.jpg"></a>
+            <a href="./images/2481596.jpg" data-lightbox="mygallery" data-title="Tap to see next"><img src="./images/2481596.jpg"></a>
+            <a href="" data-lightbox="mygallery" data-title="Tap to see next"><img src="./images/2481596.jpg"></a>
+            <a href="" data-lightbox="mygallery" data-title="Tap to see next"><img src="./images/2481596.jpg"></a>
+            <a href="" data-lightbox="mygallery" data-title="Tap to see next"><img src="./images/2481596.jpg"></a>
+            <a href="" data-lightbox="mygallery" data-title="Tap to see next"><img src="./images/2481596.jpg"></a>
+            <a href="" data-lightbox="mygallery" data-title="Tap to see next"><img src="./images/2481596.jpg"></a>
+            <a href="" data-lightbox="mygallery" data-title="Tap to see next"><img src="./images/2481596.jpg"></a>
+            <a href="" data-lightbox="mygallery" data-title="Tap to see next"><img src="./images/2481596.jpg"></a>
+            <a href="" data-lightbox="mygallery" data-title="Tap to see next"><img src="./images/2481596.jpg"></a>
+            <a href="" data-lightbox="mygallery" data-title="Tap to see next"><img src="./images/2481596.jpg"></a>
+            <a href="" data-lightbox="mygallery" data-title="Tap to see next"><img src="./images/2481596.jpg"></a>
+            <a href="" data-lightbox="mygallery" data-title="Tap to see next"><img src="./images/2481596.jpg"></a>
         </div>
     </div>
     <div id="contact" class="contact">
