--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <script src="https://kit.fontawesome.com/3faf7fd3d7.js" crossorigin="anonymous"></script>
     <link rel="icon" href="./images/logo.png">
     <script src="./lightbox-plus-jqurey.min.js"></script>
+    <script type="text/javascript">
+        $('#home').css('opacity', 0);
+        $(window).load(function() {
+        $('#home').css('opacity', 1);
+        });
+        </script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet" href="./lightbox.min.css">
 
