--- a/index.html
+++ b/index.html
@@ -4,19 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" media="none" onload="if(media!='all')media='all'" href="./style.css">
-    <!-- <noscript><link rel="stylesheet" href="/style.css"></noscript> -->
+    <link rel="stylesheet" type="text/css" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3faf7fd3d7.js" crossorigin="anonymous"></script>
     <link rel="icon" href="./images/logo.png">
     <script src="./lightbox-plus-jqurey.min.js"></script>
-    <script type="text/javascript">
-        $('#home').css('opacity', 0);
-        $(window).load(function() {
-        $('#home').css('opacity', 1);
-        });
-        </script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet" href="./lightbox.min.css">
 
     
@@ -48,7 +40,6 @@
             </a>
         </div>
         </div>
-
     </div>
     <div id="plan" class="plan">
         
