--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <h3>24 Hours</h3>
             </div>
             <div class="phonenumber">
-                <h1>Contact Us</h1>
+                <h1>Contact</h1>
                 <h3>Tel: 44802332</h3>
                 <h3>Phone: 70025678</h3>
                 <h3>33456950</h3>
